--- a/logistic_regression_and_nn.tex
+++ b/logistic_regression_and_nn.tex
@@ -1,6 +1,7 @@
 \documentclass{article}
 \usepackage{graphicx}
 \usepackage{float}
+\usepackage{hyperref}
 \usepackage[boxruled,vlined,linesnumbered]{algorithm2e}
 
 \newcommand{\myparagraph}[1]{\paragraph{#1}\mbox{}}
@@ -9,7 +10,7 @@
 \begin{document}
 
 \title{Logistic Regression and Neural Networks}
-\author{William Grim}
+\author{William Grim \\ \href{mailto:grimwm@gmail.com}{grimwm@gmail.com}}
 
 \maketitle
 
