--- a/regularization.tex
+++ b/regularization.tex
@@ -4,7 +4,7 @@
 \begin{document}
 
 \title {Regularization of NN}
-\author{William Grim \\ email \\ \href{mailto:grimwm@gmail.com}{grimwm@gmail.com}}
+\author{William Grim \\ \href{mailto:grimwm@gmail.com}{grimwm@gmail.com}}
 
 \maketitle
 
