--- a/regularization_and_normalization.tex
+++ b/regularization_and_normalization.tex
@@ -102,14 +102,14 @@ NOTE: Use the same $\mu$ and $\sigma^2$ on your test set as you did on your trai
 
 A \textbf{vanishing gradient} is one that a gradient becomes so shallow that it becomes difficult to find the optimal cost because we move along the curve $J$ very slowly.  An \textbf{exploding gradient} is one that becomes so steep that it becomes difficult to find the optimal cost because we move along the curve $J$ too quickly.
 
-Assume a very deep L-layer network with just two nodes per hidden unit.  For the sake of argument, also assume we are using the linear activation function, $g(W, A) = W A$.  We end up in this situation for $\hat{y}$ as seen in Equation \ref{eqn:weight_exponentiation}:
+Assume a very deep L-layer network with just two nodes per hidden unit.  For the sake of argument, also assume we are using the linear activation function, $g(W, A) = W * A$.  We end up in this situation for $\hat{y}$ as seen in Equation \ref{eqn:weight_exponentiation}:
 
 \begin{gather}
 \hat{y} = g(W^{[L]}, g(W^{[L-1]}, ..., g(W^{[2]}, g(W^{[1]}, X))...)) \\
 \hat{y} = W^{[L]} W^{[l-1]} ... W^{[3]} W^{[2]} W^{[1]} X \label{eqn:weight_exponentiation}
 \end{gather}
 
-On its own, this is not a problem, but imagine two scenarios where all of $W^{[1]}, ..., W^{[L]}$ were one of the following $W_1$ or $W_2$:
+On its own, this is not a problem, but imagine two scenarios where all of $W^{[1]}, ..., W^{[L]}$ are one of the following $W_1$ or $W_2$:
 
 \begin{gather}
 W_1 = \begin{bmatrix}
@@ -130,5 +130,11 @@ As we multiply $W_1$ by itself multiple times, we will find that we end up with 
 \paragraph{Scenario 2}
 
 As we multiply $W_2$ by itself multiple times, we will find that we end up with the $0.5$ values becoming $0.5 * 0.5 * ... = 0.5^L$, which results in a vanishing gradient.
+
+\subsection{Proper Weight ($W$) Initialization}
+
+Assume 1-layer neural network with 4 input features, $x$.  Then, $z = w_1 x_1 + w_2 x_2 + w_3 x_3 + w_4 x_4 + b$.  Therefore, to prevent $z$ from exploding, as $n -> \infty$, we want $w_i -> 0$.
+
+$W^{[l]} = np.random.randn(shape) * np.sqrt(\frac{2}{n^{[l-1]}})$
 
 \end{document}
