--- a/regularization_and_normalization.tex
+++ b/regularization_and_normalization.tex
@@ -14,6 +14,8 @@
 
 \maketitle
 
+\tableofcontents
+
 \begin{abstract}
 In many cases, when building a Neural Network, you end up either with underfitting, known as bias, or overfitting, known as variance.  Regularization aids in removing variance, and with today's maths, it does not often affect bias negatively.
 \end{abstract}
